crates/peryx-ecosystem-pypi/tests/unit/tests/simple/snapshots/peryx_ecosystem_pypi__tests__simple__render_tests__detail_html.snap
---
source: crates/peryx-ecosystem-pypi/tests/unit/tests/simple/render_tests.rs
expression: render_detail_html(&sample_detail())
---
<!DOCTYPE html>
<html>
  <head>
    <meta name="pypi:repository-version" content="1.4">
    <meta name="pypi:project-status" content="active">
    <meta name="pypi:project-status-reason" content="available">
    <title>Links for proj&amp;&lt;&gt;</title>
  </head>
  <body>
    <a href="https://files.example/a?b=1&amp;c=2#sha256=6b86b273ff34fce19d6b804eff5a3f5747ada4eaa22f1d49c01e52ddb7875b4b" data-requires-python="&gt;=3.8,&lt;4" data-gpg-sig="true" data-provenance="https://files.example/a.provenance" data-core-metadata="sha256=d4735e3a265e16eee03f59718b9b5d03019c07d8b6c51f90da3a666eec13ab35" data-dist-info-metadata="sha256=d4735e3a265e16eee03f59718b9b5d03019c07d8b6c51f90da3a666eec13ab35">proj&amp;&lt;&gt;-2.0-py3-none-any.whl</a><br />
    <a href="https://files.example/q&quot;uote" data-gpg-sig="false" data-yanked="broken build" data-core-metadata="true" data-dist-info-metadata="true">proj-1.5.tar.gz</a><br />
    <a href="https://files.example/c.whl#sha256=4e07408562bedb8b60ce05c1decfe3ad16b72230967de01f640b7e4729b49fce" data-yanked="">proj-1.0-py3-none-any.whl</a><br />
  </body>
</html>
