crates/peryx-ecosystem-pypi/tests/unit/tests/simple/snapshots/peryx_ecosystem_pypi__tests__simple__render_tests__index_html.snap
---
source: crates/peryx-ecosystem-pypi/tests/unit/tests/simple/render_tests.rs
expression: render_index_html(&sample_list())
---
<!DOCTYPE html>
<html>
  <head>
    <meta name="pypi:repository-version" content="1.4">
    <title>Simple index</title>
  </head>
  <body>
    <a href="flask/">Flask</a>
    <a href="zope-interface/">zope.interface</a>
    <a href="a%26%3C%3E/">a&amp;&lt;&gt;</a>
  </body>
</html>
